objects/LogsWarehouse__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Class_Name__c</fullName>
        <description>Name of the Batch class which is throwing error.</description>
        <label>Batch Class Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_description__c</fullName>
        <label>Error description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalUserID__c</fullName>
        <description>It's store the value to identify the user.</description>
        <label>ExternalUserID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <description>Id of the records which didn't get updated due to some error.</description>
        <label>Record Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <description>Stores Service Name.</description>
        <label>Service Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Logs Warehouse</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Logs Warehouse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs Warehouse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Error_description__c</columns>
        <columns>ExternalUserID__c</columns>
        <columns>NAME</columns>
        <columns>Record_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Email_Service_InquisiumToSalesforceSyn</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Id__c</columns>
        <columns>Service_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Name__c</field>
            <operation>contains</operation>
            <value>Inquisium</value>
        </filters>
        <label>Email Service -InquisiumToSalesforceSync</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Administrator</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Event_Builder_Email_Service1</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Error_description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Name__c</field>
            <operation>contains</operation>
            <value>Event Builder - Email Service</value>
        </filters>
        <label>Event Builder -  Email Service</label>
        <language>en_US</language>
    </listViews>
</CustomObject>